# example_library_ws

./: .gitignore
src/library_pkg/: CMakeLists.txt  package.xml
src/library_pkg/include/SimpleLibrary/: simple_library.cpp  simple_library.hpp
src/library_pkg/src/: main.cpp
src/user_package/: CMakeLists.txt  package.xml
src/user_package/src/: main.cpp
