<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>user_package</name>
  <version>1.0.0</version>
  <description>Example package to use the simple library.</description>
  <maintainer email="yossiovcharik@gmail.com">Yossi Ovcharik</maintainer>
  <license>LGPV v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
